update: fix dark mode, animation navigate

--- a/src/index.css
+++ b/src/index.css
@@ -143,3 +143,10 @@ code {
 .running {
   animation-play-state: running;
 }
+
+/* Tạo class để disable transition tạm thời */
+.disable-transitions *,
+.disable-transitions *::before,
+.disable-transitions *::after {
+  transition: none !important;
+}
